# ImmundaNoctis-master

./: ANALISI.MD  PROMPT USING.MD  PROMPT.MD  README.md  ROADMAP.MD  ROADMAP_IT.MD  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/luposolitario/immundanoctis/: AssetLoadingTest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.json  scenes.json
app/src/main/java/io/github/luposolitario/immundanoctis/: AdventureActivity.kt  CharacterSheetActivity.kt  ConfigurationActivity.kt  MainActivity.kt  ModelActivity.kt  SetupActivity.kt  StdfGenerationActivity.kt  StdfModelActivity.kt
app/src/main/java/io/github/luposolitario/immundanoctis/data/: ChatMessage.kt  ExportedMessage.kt  GameData.kt  SessionData.kt  SkillData.kt
app/src/main/java/io/github/luposolitario/immundanoctis/engine/: GameLogicManager.kt  GemmaEngine.kt  (+4 more)
app/src/main/res/values/: strings.xml
app/src/test/java/io/github/luposolitario/immundanoctis/: ExampleUnitTest.kt  StringTagParserTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  llama-android.cpp
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
stdf/: build.gradle.kts
stdf/src/androidTest/java/io/github/luposolitario/stdf/: ExampleInstrumentedTest.kt
stdf/src/main/cpp/: CMakeLists.txt  stdf.cpp
stdf/src/main/java/io/github/luposolitario/stdf/: NativeLib.kt  StdfEngine.kt
stdf/src/test/java/io/github/luposolitario/stdf/: ExampleUnitTest.kt
(+39 files in other folders)
